2005-09-13  Kalpit Desai	<kvdesai@cs.unc.edu>
	* load_agnostic_tracking.m: Added option for concise loading, that saves memory and loads only bare essential data.
	* atanalysis.m: made compatible with the change above. Also, now draws lines for jacobian update instants.
2005-09-13  Kalpit Desai	<kvdesai@cs.unc.edu>
	* atcore.m: version 1.2. Some minor changes.
	* atanalysis.m: working version.
	* atanalysis.fig: same.

2005-09-06  Kalpit Desai	<kvdesai@cs.unc.edu>
	* atcore.m: Fixed a bug in 'reciprocal' mode fitting. Also deleted the time-offset removal in this file. It should be taken care of by load_agnostic_tracking file.
	* atanalysis.fig: Removed the 'select all' button.

2005-09-06  Kalpit Desai	<kvdesai@cs.unc.edu>
	* atanalysis.m: Now draws markers for the timings when perturbations were injected.
2005-09-02  Kalpit Desai	<kvdesai@cs.unc.edu>
	* atcore.m: Added the core script that does actual analsis of the agnostic tracking data set. This script can be called from matlab prompt. It is also called from atanalysis GUI.
	* Load agnostic tracking: Now compatible with the recent versions of Laser Tracker where Jacobian is in absolute space and not in derivative space. Also parses the noise-messages for each Jacobian.
	* atanalysis.fig, atanalysis.m: GUI version of the analysis program. Call upon appropriate scripts and displays results.
	* modifiedBP.m: Slight change in comments. Still not compatible with the recent version of Laser Tracker.

2005-07-13  Kalpit Desai	<kvdesai@cs.unc.edu>
	* modifiedBP.m: Fixed the bug where it was looking for Active Jacobian for calculation Active-Position-Errors during blips.
2005-07-12  Kalpit Desai	<kvdesai@cs.unc.edu>

	* Initial version for ChangeLog in Agnostic directory
	* atanalysis.m, atanalysis.fig: 
	- A GUI for analysing agnostic tracking data. Initial version.
	* load_agnostic_tracking.m: